# triviacon

./: .gitignore  CLAUDE.md  LICENSE  PLAYTESTING.md  README.md  electron-builder.yml  package.json  pnpm-lock.yaml  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.github/workflows/: ci.yml  release.yml  tauri.yml
design/: splash-media.md  theming.md
docs/: index.html  style.css
mocks/: README.md  big_mockQuiz.json  big_mockQuiz.tcq  blankQuiz.json  mockQuiz.json  mockQuiz.tcq  splash-media-mock.html  stress_test_quiz.tcq
scripts/: build-windows-cross.sh  gen-icons.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/data/: categories.ts  db.ts  hints.ts  index.ts  questions.ts  quizFile.ts  quizStore.test.ts  quizStore.ts  zipArchive.test.ts  zipArchive.ts
src/main/: index.ts  mediaProtocol.ts  portablePath.ts  settings.ts  windows.ts
src/main/export/: pdfExport.ts
src/main/ipc/: index.ts
src/main/state/: GameEngine.test.ts  GameEngine.ts
src/preload/: controlPanel.ts  gameScreen.ts  index.ts
src/renderer/: env.d.ts
src/renderer/src/: App.tsx  main.tsx
src/shared/: AudioVisualizer.tsx  RichText.test.ts  RichText.tsx  constants.test.ts  constants.ts  i18n.ts  media.test.ts  media.ts  mediaUrl.ts  ranking.test.ts  ranking.ts
src/shared/locales/: en.json  index.ts  pl.json
src/shared/types/: ipc.ts  quiz.ts  state.ts
src/web-backend/: bootstrapControlPanel.ts  bootstrapGameScreen.ts  controlPanelApi.ts  gameScreenApi.ts  quizFileWeb.ts  settingsWeb.ts  tauri.ts
(+95 files in other folders)
